trying to get things working when packaged as a jar